<resources>
    <string name="app_name">Orcas Forecast</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="city_name">city name..</string>
    <string name="not_accurate_data">Not Accurate Data</string>
    <string name="couldn_t_fetch_data">Couldn\'t fetch data</string>
    <string name="try_again">try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_occurred">Error Occurred</string>
</resources>